--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Gwentoo</title>
 
-  <link href="/css/normalize.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/normalize.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/fonts.css" media="all" rel="stylesheet" type="text/css" />
 
-  <script src="/assets/app.js"></script>
+  <script src="assets/app.js"></script>
 </head>
 <body>
 </body>
